# ananicy-rule-o-matic

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
locales/: de.yml  en.yml  fr.yml  it.yml
src/: lib.rs  main.rs
src/application/: mod.rs  process_service.rs  rule_service.rs
src/domain/: mod.rs  models.rs
src/infrastructure/: config.rs  config_repository.rs  fs_repo.rs  mod.rs  rule_repository.rs
src/presentation/: cli.rs  tui.rs
tests/application/: mod.rs  process_service_tests.rs  rule_service_tests.rs
tests/infrastructure/: config_repository_tests.rs  mod.rs  rule_repository_tests.rs
