[package]
name = "ananicy-rule-o-matic"
version = "0.0.1"
edition = "2024"
license = "MIT"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.38.1"
walkdir = "2.5.0"
chrono = "0.4.43"
anyhow = "1.0.101"      # Einfaches Error Handling
thiserror = "2.0.18"   # Strukturierte Errors für Libs

clap = { version = "4.5.58", features = ["derive"] }
colored = "3.1.1"

ratatui = "0.30.0"
crossterm = "0.29.0"