[package]
name = "ananicy-rule-o-matic"
version = "0.0.1"
edition = "2024"
license = "MIT"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
libc = "0.2.182"
sysinfo = "0.38.1"
walkdir = "2.5.0"
chrono = "0.4.43"
anyhow = "1.0.101"
thiserror = "2.0.18"

toml = "1.0.1"
directories = "6.0.0"
dirs = "6.0.0"

clap = { version = "4.5.58", features = ["derive"] }
colored = "3.1.1"

ratatui = "0.30.0"
crossterm = "0.29.0"

rust-i18n = "3.1.5"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.4"
tempfile = "3.25.0"
